--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,13 +1,12 @@
 @import 'bourbon';
 @import 'mixins';
 @import 'variables';
-@import 'colours';
 @import 'sticky-footer-navbar';
 @import 'offcanvas';
 @import 'sidebar-left';
 @import 'sidebar-right';
 @import 'overlay';
-@import 'forms';
+//@import 'forms';
 @import 'typography';
 @import 'layout';
 @import 'banners';
