--- a/sass/_overlay.scss
+++ b/sass/_overlay.scss
@@ -5,7 +5,9 @@
 	height: 100%;
 	top: 0;
 	left: 0;
-	background: rgba(153,204,51,0.9);
+    background: $grey-bg;
+    padding: 4rem;
+//	background: rgba(153,204,51,0.9);
 }
 
 /* Overlay closing cross */
