--- a/sass/_sidebar-left.scss
+++ b/sass/_sidebar-left.scss
@@ -30,7 +30,7 @@
     height: 100%;
     margin-left: -250px;
     overflow-y: auto;
-    background: #000;
+    background: $ablis-blue;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
@@ -59,30 +59,41 @@
     top: 0;
     width: 250px;
     margin: 0;
-    padding: 0;
+    padding: 1rem 0;
     list-style: none;
+    h5 {
+        font-family: $font-light;
+        font-weight: 100;
+        font-size: 14px;
+        color: #ddd;
+        padding: 0 20px;
+        margin-bottom: 20px;
+    }
 }
 
 .sidebar-nav-left li {
     text-indent: 20px;
-    line-height: 40px;
+    line-height: 24px;
 }
 
 .sidebar-nav-left li a {
     display: block;
     text-decoration: none;
-    color: #999999;
+    color: white;
+    padding: 24px 0;
 }
 
 .sidebar-nav-left li a:hover {
     text-decoration: none;
     color: #fff;
-    background: rgba(255,255,255,0.2);
+    background: rgba(9, 33, 71, 0.3);
 }
 
 .sidebar-nav-left li a:active,
 .sidebar-nav-left li a:focus {
     text-decoration: none;
+    background: rgba(9, 33, 71, 0.3);
+    font-weight: 600;
 }
 
 .sidebar-nav > .sidebar-brand {
@@ -92,12 +103,12 @@
 }
 
 .sidebar-nav-left > .sidebar-brand-left a {
-    color: #999999;
+    color: #fff;
 }
 
 .sidebar-nav-left > .sidebar-brand-left a:hover {
     color: #fff;
-    background: none;
+    background: #1d417a;
 }
 
 #menu-toggle-left {
