--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -5,7 +5,13 @@
 //************************************************************************************
 
 // Base
+html {
+    font-family: $font-light;
+    font-size: 16px;
+}
+
 body {
+    font-family: $font-light;
     font-weight: 300;
 }
 
@@ -15,7 +21,7 @@ strong {
 
 // ABLIS Brand
 .navbar-brand {
-    font-family: 'Open Sans', sans-serif;
+    font-family: $font-light;
     font-weight: 300;
 }
 
@@ -23,4 +29,8 @@ strong {
     font-size: 1rem;
     margin-bottom: 2rem;
     text-align: center;
+}
+
+button {
+    font-family: $font-light;
 }
