--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -14,6 +14,71 @@ $break-wide: 1220px;
 $banner-break: 640px;
 
 
+//**********************************************************************************
+// COLOURS.scss              //
+//**********************************************************************************
+
+
+$ablis-blue: #254f90;
+$ablis-red: #c62c2a;
+$dark-blue: #1a0dab;
+$link: #0f54c3;
+$hz: #c1c1c1;
+$link-fg: #000;
+$link-bg: white;
+$brand-bg: #e2e2e2;
+$brand-fg: #666666;
+$main-content-bg: #f2f2f2;
+$greytext: #545454;
+$bg-footer: #e7e8e9;
+$required: #cc3300;
+$results-alert-bg: #ffe8af;
+$input-focus: #fff79b;
+$highlight-bg: #fff79b;
+$yellow-fade: #fff79b;
+
+$table-lines: #e7e7e7;
+$table-th: #e7e7e7;
+
+$validation-red: #cc0000;
+$validation-warning: #9e2600;
+$validation-warning-bg: #f6c6b6;
+$pale-red: #ffd9d9;
+$system-message: #175386;
+
+$lightest-gray: #f7f7f7;
+$grey-bg: #e4e5e5;
+$bg-disabled: #efebe7;
+$success-bg: #bbfcbb;
+$amber-bg: #fcebbe;
+
+
+$green: #37a400;
+$brand-blue: #3179b5;
+$blue-light: #a7c4dc;
+$blue-pale: #cfdeeb;
+$blue-paler: #e8f0f8;
+$blue-pale-border: #c1cbd4;
+$white70: rgba(255,255,255,0.7);
+$black75: rgba(0,0,0,0.75);
+$gray: #666666;
+$gray-light: #cccccc;
+$gray-dark: #444444;
+
+$process-alert: #efe8ce;	
+
+$button-start-color: #367ab3;
+$button-end-color: #2a6ba1;
+$button-color: white;
+$button-color-secondary: #666;
+$button-bg-hover: #000000;
+$button-color-hover: #ffffff;
+$button-disabled: #656565;
+$button-disabled-border: #B0B0B0;
+
+$input-outline: #02bfe7;
+
+
 // Padding and radius
 // ------------------------------------------------------------------------------------------------------
 
@@ -27,7 +92,7 @@ $site-padding: 3%;
 // Typography
 // ------------------------------------------------------------------------------------------------------
 
-$font-light: Arial;
+$font-light: 'Open Sans', sans-serif;
 
 $font-size-base: 16px;
 $font-size-default: 1rem;
