--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -11,3 +11,12 @@
       -ms-border-radius: $radius;
           border-radius: $radius;
 }
+
+
+@mixin transition {
+  -webkit-transition: all .2s ease-in-out;
+  -moz-transition: all .2s ease-in-out;
+  -ms-transition: all .2s ease-in-out;
+  -o-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+}
