--- a/sass/clean.scss
+++ b/sass/clean.scss
@@ -2,6 +2,7 @@
 @import 'mixins';
 @import 'variables';
 @import 'base';
+@import 'buttons';
 //@import 'sticky-footer-navbar';
 @import 'sidebar-left';
 @import 'sidebar-right';
