--- a/sass/_forms.scss
+++ b/sass/_forms.scss
@@ -1,28 +1,8 @@
 // ----- Default styling for buttons, fields, inputs and custom checkboxes and radiobuttons
 // ------------------------------------------------------------------------------------------------------
 
-// Sidebar toggle buttons
-// ---------------------------------------------------------
-
-.sidebar-toggle {
-    height: 40px;
-    width: 40px;
-    display: block;
-    &#menu-toggle-left {
-        background-color: $ablis-blue;
-        color: white;
-        border-top-right-radius: 5px;
-        border-bottom-right-radius: 5px;
-    }
-}
-
-
-
-
-
 // Buttons
 // ------------------------------------------------------------------------------------------------------
-
 .btn {
     background-color: white;
     border: 1px solid $button-start-color;
@@ -62,21 +42,21 @@
 
 /* The default button is more visually distinctive and should only appear once on the page */
 
-.btn-default {
-    background: rgba(79, 143, 230, 1);
-    background: -moz-linear-gradient(top, rgba(79, 143, 230, 1) 0%, rgba(54, 122, 179, 1) 100%);
-    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(79, 143, 230, 1)), color-stop(100%, rgba(54, 122, 179, 1)));
-    background: -webkit-linear-gradient(top, rgba(79, 143, 230, 1) 0%, rgba(54, 122, 179, 1) 100%);
-    background: -o-linear-gradient(top, rgba(79, 143, 230, 1) 0%, rgba(54, 122, 179, 1) 100%);
-    background: -ms-linear-gradient(top, rgba(79, 143, 230, 1) 0%, rgba(54, 122, 179, 1) 100%);
-    background: linear-gradient(to bottom, rgba(79, 143, 230, 1) 0%, rgba(54, 122, 179, 1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4f8fe6', endColorstr='#367ab3', GradientType=0);
-    color: $button-color;
-    border: 1px solid $button-start-color;
-    font-weight: bold;
-    margin-right: 0;
-    padding: 0.72em 2em;
-}
+//.btn-default {
+//    background: rgba(79, 143, 230, 1);
+//    background: -moz-linear-gradient(top, rgba(79, 143, 230, 1) 0%, rgba(54, 122, 179, 1) 100%);
+//    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(79, 143, 230, 1)), color-stop(100%, rgba(54, 122, 179, 1)));
+//    background: -webkit-linear-gradient(top, rgba(79, 143, 230, 1) 0%, rgba(54, 122, 179, 1) 100%);
+//    background: -o-linear-gradient(top, rgba(79, 143, 230, 1) 0%, rgba(54, 122, 179, 1) 100%);
+//    background: -ms-linear-gradient(top, rgba(79, 143, 230, 1) 0%, rgba(54, 122, 179, 1) 100%);
+//    background: linear-gradient(to bottom, rgba(79, 143, 230, 1) 0%, rgba(54, 122, 179, 1) 100%);
+//    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#4f8fe6', endColorstr='#367ab3', GradientType=0);
+//    color: $button-color;
+//    border: 1px solid $button-start-color;
+//    font-weight: bold;
+//    margin-right: 0;
+//    padding: 0.72em 2em;
+//}
 
 fieldset .btn,
 caption .btn,
