--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -51,10 +51,10 @@
         text-align: left;
         background: none;
         border: 0;
-        padding: 0;
+        padding: 0 12px;
         &:focus, &:active {
-            margin: -16px -20px 0 -20px;
-            padding: 16px 20px 0 20px;
+            margin: -16px -16px 0 -16px;
+            padding: 16px 28px 0 28px;
             outline: none;
             background-color: aliceblue;
         }
@@ -91,7 +91,7 @@
     }
 }
 
-.results-controlbar {
+#results-controlbar, #details-controlbar {
     float: right;
     clear: both;
     padding: 0.5rem 0;
