--- a/sass/_sidebar-left.scss
+++ b/sass/_sidebar-left.scss
@@ -46,7 +46,9 @@
     margin-right: -300px;
 }
 
+
 /* Sidebar Styles */
+
 .sidebar-nav-left {
     position: absolute;
     top: 0;
@@ -106,30 +108,34 @@
 
 #menu-toggle-left {
     text-align: left;
+    i {
+        position: relative;
+        top: 9px;
+        left: 15px;
+        -webkit-transition: all 300ms ease-in 0s;
+        -moz-transition: all 300ms ease-in 0s;
+        -o-transition: all 300ms ease-in 0s;
+        transition: all 300ms ease-in 0s;
+    }
 }
 
 @media(min-width:768px) {
     #content {
         padding-left: 0;
     }
-
     #content.toggled-left {
         padding-left: 300px;
     }
-
     #sidebar-wrapper-left {
         width: 0;
     }
-
     #content.toggled-left #sidebar-wrapper-left {
         width: 300px;
     }
-
     #page-content-wrapper {
         padding: 20px;
         position: relative;
     }
-
     #content.toggled-left #page-content-wrapper {
         position: relative;
         margin-right: 0;
