--- a/sass/_forms.scss
+++ b/sass/_forms.scss
@@ -800,7 +800,7 @@ div.radio-toggle.stacked {
             ~label {
                 display: inline-block;
                 //line-height: 38px;
-                color: $gray-dark;
+                color: $grey-dark;
                 padding: 9px 5px 9px 55px;
                 min-height: 27px;
                 -moz-transition: color 1s ease;
