--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -99,6 +99,8 @@
     a {
         text-decoration: underline;
         margin-right: 12px;
+        margin-left: 20px;
+        padding: 0 4px;
         &:hover {
             color: white;
             background-color: black;
