--- a/sass/_sidebar-right.scss
+++ b/sass/_sidebar-right.scss
@@ -41,14 +41,17 @@
     margin-left: -300px;
 }
 
+
 /* Sidebar Styles */
+
 .sidebar-nav-right {
-    position: absolute;
-    top: 0;
+    position: relative;
     width: 300px;
     margin: 0;
     padding: 1rem 0;
     list-style: none;
+    min-height: 100%;
+    height: 100%;
 }
 
 .sidebar-nav-right li {
@@ -58,6 +61,7 @@
     margin-bottom: 20px;
     display: inline-flex;
     padding-right: 20px;
+    padding-left: 20px;
     font-weight: 500;
     justify-content: flex-end;
 }
@@ -71,7 +75,7 @@
 .sidebar-nav-right li a:hover {
     text-decoration: none;
     color: #fff;
-    background: rgba(255,255,255,0.2);
+    background: rgba(255, 255, 255, 0.2);
 }
 
 .sidebar-nav-right li a:active,
@@ -79,17 +83,17 @@
     text-decoration: none;
 }
 
-.sidebar-nav-right > .sidebar-brand-right {
+.sidebar-nav-right>.sidebar-brand-right {
     height: 65px;
     font-size: 18px;
     line-height: 60px;
 }
 
-.sidebar-nav-right > .sidebar-brand-right a {
+.sidebar-nav-right>.sidebar-brand-right a {
     color: #999999;
 }
 
-.sidebar-nav-right > .sidebar-brand-right a:hover {
+.sidebar-nav-right>.sidebar-brand-right a:hover {
     color: #fff;
     background: none;
 }
@@ -121,29 +125,94 @@ button.delete {
     width: 80%;
 }
 
+#criteria {
+    margin-bottom: 0px;
+}
+
+button.accordion {
+    background-color: $grey-bg;
+    padding: 20px;
+    margin-bottom: 1px;
+    color: $greytext;
+    font-weight: 600;
+    cursor: pointer;
+    width: 100%;
+    text-align: left;
+    border: none;
+    outline: none;
+    transition: 0.4s ease-out;
+    &:hover {
+        background-color: $grey-light;
+    }
+    &:after {
+        font-family: "FontAwesome";
+        content: '\f078'; /*-- fa-chevron-down --*/
+        font-size: 13px;
+        float: right;
+        margin-left: 5px;
+    }
+}
+
+button.accordion.active {
+    background-color: $grey-light;
+    &:after {
+        content: "\f077"; /*-- fa-chevron-up --*/
+    }
+}
+
+.panel {
+    padding: 0px;
+    background-color: white;
+//    max-height: 0;
+//    overflow: hidden;
+//    transition: max-height 0.2s ease-out;
+    .subby {
+        background-color: $lightest-grey;
+        padding: 14px;
+        font-size: 14px;
+        a {
+            text-decoration: underline;
+            padding: 3px;
+            &:hover {
+                background: black;
+                color: white;
+            }
+        }
+    }
+}
+.dom {
+    color: $ablis-blue;
+    margin: 0;
+    padding: 20px 20px 0 20px;
+}
+
+.sub {
+    color: #000;
+    font-weight: 400;
+    padding: 0 20px;
+    margin-bottom: 0px;
+    &:last-child {
+        margin-bottom: 36px;
+    }
+}
+
 @media(min-width:768px) {
     #content {
         padding-left: 0;
     }
-
     #content.toggled-right {
         padding-right: 300px;
     }
-
     #sidebar-wrapper-right {
         width: 0;
     }
-
     #content.toggled-right #sidebar-wrapper-right {
         width: 300px;
-        padding: 20px;
     }
-
     #page-content-wrapper {
         padding: 20px;
         position: relative;
     }
-
     #content.toggled-right #page-content-wrapper {
         position: relative;
         margin-left: 0;
