--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -46,7 +46,7 @@ $validation-warning-bg: #f6c6b6;
 $pale-red: #ffd9d9;
 $system-message: #175386;
 
-$lightest-gray: #f7f7f7;
+$lightest-grey: #f7f7f7;
 $grey-bg: #e4e5e5;
 $bg-disabled: #efebe7;
 $success-bg: #bbfcbb;
@@ -61,9 +61,9 @@ $blue-paler: #e8f0f8;
 $blue-pale-border: #c1cbd4;
 $white70: rgba(255,255,255,0.7);
 $black75: rgba(0,0,0,0.75);
-$gray: #666666;
-$gray-light: #cccccc;
-$gray-dark: #444444;
+$grey: #666666;
+$grey-light: #cccccc;
+$grey-dark: #444444;
 
 $process-alert: #efe8ce;	
 
