--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -20,6 +20,7 @@ $banner-break: 640px;
 
 
 $ablis-blue: #254f90;
+$ablis-blue-hover: #1d417a;
 $ablis-red: #c62c2a;
 $dark-blue: #1a0dab;
 $link: #0f54c3;
