--- a/sass/_buttons.scss
+++ b/sass/_buttons.scss
@@ -1,38 +1,83 @@
 // Sidebar toggle buttons
 // ---------------------------------------------------------
 .sidebar-toggle {
-    height: 40px;
-    width: 40px;
-    display: block;
+    display: inline-block;
     &#menu-toggle-left {
-        background-color: #939393;
-        color: white;
-        border-top-right-radius: 5px;
-        border-bottom-right-radius: 5px;
+        background-color: $grey-bg;
+        color: $grey;
+        border-top-right-radius: 4px;
+        border-bottom-right-radius: 4px;
+        height: 40px;
+        width: 30px;
         &:hover {
             background-color: $ablis-blue;
+            color: white;
+            width: 36px;
         }
     }
     &#menu-toggle-right {
-        background-color: #939393;
-        color: white;
-        border-top-left-radius: 5px;
-        border-bottom-left-radius: 5px;
+        background-color: $grey-bg;
+        color: $grey;
+        border-top-left-radius: 4px;
+        border-bottom-left-radius: 4px;
+        height: 40px;
+        width: 30px;
         &:hover {
             background-color: $ablis-blue;
+            color: white;
+            width: 36px;
         }
     }
 }
 
+#menu-toggle-left {
+    text-align: left;
+    i {
+        position: relative;
+        top: 9px;
+        left: 11px;
+        -webkit-transition: all 300ms ease 0s;
+        -moz-transition: all 300ms ease 0s;
+        -o-transition: all 300ms ease 0s;
+        transition: all 300ms ease 0s;
+        &:hover {
+            left: 15px;
+        }
+    }
+}
 #menu-toggle-right {
     text-align: right;
     i {
         position: relative;
         top: 9px;
-        right: 15px;
-        -webkit-transition: all 300ms ease-in 0s;
-        -moz-transition: all 300ms ease-in 0s;
-        -o-transition: all 300ms ease-in 0s;
-        transition: all 300ms ease-in 0s;
+        right: 10px;
+        -webkit-transition: all 300ms ease 0s;
+        -moz-transition: all 300ms ease 0s;
+        -o-transition: all 300ms ease 0s;
+        transition: all 300ms ease 0s;
+        &:hover {
+            right: 15px;
+        }
+    }
+}
+
+// Search results/details toolbars
+#results-controlbar, 
+#details-controlbar {
+    float: right;
+    padding: 10px 0;
+    margin-bottom: 1rem;
+    display: inline;
+    a {
+        text-decoration: underline;
+        margin-right: 20px;
+        margin-left: 20px;
+        padding: 0 4px;
+        font-size: 14px;
+        &:hover {
+            color: white;
+            background-color: black;
+            text-decoration: none;
+        }
     }
 }
